[gd_scene load_steps=14 format=2]

[ext_resource path="res://display_level.png" type="Texture" id=1]
[ext_resource path="res://Tomorrow_Night.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://back_button1.png" type="Texture" id=3]
[ext_resource path="res://continue_button1.png" type="Texture" id=4]
[ext_resource path="res://continue_button2.png" type="Texture" id=5]
[ext_resource path="res://continue_button3.png" type="Texture" id=6]
[ext_resource path="res://display_level.gd" type="Script" id=7]
[ext_resource path="res://back_button2.png" type="Texture" id=8]
[ext_resource path="res://back_button3.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=6]
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 12
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 12
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=7]
resource_name = "show_animation"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0.01, 1 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "typewriter_description"
} ]
}

[node name="display_level" type="Node2D"]
script = ExtResource( 7 )

[node name="DisplayLevel" type="Sprite" parent="."]
modulate = Color( 0.560784, 0.898039, 1, 1 )
texture = ExtResource( 1 )

[node name="TitleText" type="Label" parent="."]
margin_left = -349.0
margin_top = -154.0
margin_right = 349.0
margin_bottom = -119.0
custom_fonts/font = SubResource( 6 )
text = "Meeting Derivatives"
align = 1
valign = 1

[node name="DescriptionText" type="RichTextLabel" parent="."]
margin_left = -338.0
margin_top = -109.0
margin_right = 343.0
margin_bottom = 83.0
grow_horizontal = 2
grow_vertical = 0
custom_fonts/bold_font = SubResource( 3 )
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "This is a description
[b]This is a bolded description[/b]
[wave]This is a wavy text[/wave]
[shake]This is a shaky text[/shake]
[rainbow]This is a rainbow text[/rainbow]"
tab_size = 8
text = "This is a description
This is a bolded description
This is a wavy text
This is a shaky text
This is a rainbow text"
fit_content_height = true

[node name="Button" type="TextureButton" parent="."]
margin_left = 176.0
margin_top = 84.0
margin_right = 336.0
margin_bottom = 148.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 6 )

[node name="close_button" type="TextureButton" parent="."]
margin_left = -336.0
margin_top = 84.0
margin_right = -176.0
margin_bottom = 148.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 9 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/show_animation = SubResource( 7 )

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="close_button" to="." method="_on_close_button_pressed"]
